# mixui

./: Cargo.toml  README.md  android-emulator.nix  android.nix  default.nix
apl/: Cargo.toml
apl/src/: application.rs  lib.rs  winit_glutin.rs
demo/: Cargo.toml
demo/src/: main.rs
nix/: android-emu.nix  android-env-custom.nix  android-env.nix  unix-env.nix
pianino/: Cargo.toml
pianino/src/: main.rs
sgl/: Cargo.toml
sgl/src/: attrib.rs  buffer.rs  demo.frag.glsl  demo.rs  demo.vert.glsl  lib.rs  program.rs  texture.rs  uniform.rs
sgl/src/attrib/: colours_impls.rs  glam_impls.rs  stretch_impls.rs
sgl/src/uniform/: colours_impls.rs  glam_impls.rs  stretch_impls.rs
src/: icon.rgba  main.rs  platform.rs
src/platform/: application.rs  winit_glutin.rs
src/sgl/: uniform.rs
