[package]
name = "pianino"
version = "0.1.0"
authors = ["K. <kayo@illumium.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "^0.20.0-alpha5"
glutin = "^0.22.0-alpha5"
glow = "^0.3.0-alpha4"

[patch.crates-io]
